@@ -6,7 +6,7 @@
   </div>
 
   <div class='text'>
-    <div>
+    <div class='user'>
       $pre_username
       <a href='http://twitter.com/$user_name/'
          style='color: #$user_color;' class='username' 
