@@ -13,7 +13,7 @@
          title='$user_name' data-user='$user_name'>$full_name</a>
       $protected
     </div>
-    <div class='body'>$status_body</div>
+    <div class='body' dir='auto'>$status_body</div>
     <div class='datetime'>$date_time $source</div>
     $target
   </div>
